--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -18,6 +18,17 @@ wsgi-file = OfferHelp/wsgi.py
 
 ; 代理静态资源：路径映射
 static-map = /static=/home/kzzf/project/OfferHelp/static
+
+; 启动一个master进程，来管理其余的子进程
+master=True
 processes = 4
 threads = 2
+
+; 保存主进程的pid，用来控制uwsgi服务
+pidfile=uwsgi.pid
+; 启动项目  uwsgi uwsgi.ini
+; uwsgi --stop/reload xxx.pid  停止/重启uwsgi
+
+; 设置后台运行，保存日志
+daemonize=uwsgi.log
 ; deamonize=1  ; 用来配置background运行
