--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,13 +1,15 @@
 [uwsgi]
 ; 监听的端口
-http = :8000
+http = :80
+; 指定和nginx通信的端口
+;socket=127.0.0.1:8997
 
 ; 项目所在目录，和manage.py同级
 chdir = /home/kzzf/project/OfferHelp
 
 ; 虚拟环境所在目录
-home=/home/kzzf/project-env/OfferHelp-env
-PYTHONHOME = /home/kzzf/project-env/OfferHelp-env/bin/
+home=/home/kzzf/env/OfferHelp-env
+PYTHONHOME = /home/kzzf/env/OfferHelp-env/bin/
 
 ; 主应用中的wsgi文件
 wsgi-file = OfferHelp/wsgi.py
@@ -16,8 +18,8 @@ wsgi-file = OfferHelp/wsgi.py
 ;static-safe=/home/kzzf/project/OfferHelp/static/
 ;route = /static/(.*) static:/home/kzzf/project/OfferHelp/static/$1
 
-; 代理静态资源：路径映射
-static-map = /static=/home/kzzf/project/OfferHelp/static
+; 代理静态资源：路径映射，现在交给nginx处理
+static-map = /static=/home/kzzf/project/OfferHelp/collect_static
 
 ; 启动一个master进程，来管理其余的子进程
 master=True
